Refactorings/improvemets
* Updated to latest sbt-web/js-engine
* Made mocha only run tests from test source directories
* Made mocha command work like test command
* Added test for aggregating all tests from all frameworks
* Refactored plugin to remove duplicate code